[package]
name = "tasks"
version = "0.1.7"
edition = "2021"
keywords = ["cli", "task"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json="1.0"
structopt="0.3"
dirs = "3.0"
term_size = "0.3.1"
